added year to email generator
Added year to email generator function and fixed function name on last code section.

--- a/Exercises/02_python_further_techniques_exercise.ipynb
+++ b/Exercises/02_python_further_techniques_exercise.ipynb
@@ -125,8 +125,7 @@
    "outputs": [],
    "source": [
     "cyc = 'Cycle'\n",
-    "# Take a slice of the first three characters of cyc\n",
-""
+    "# Take a slice of the first three characters of cyc\n"
    ]
   },
   {
@@ -142,8 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take a slice of the first three characters of element 1 of travel_modes\n",
-""
+    "# Take a slice of the first three characters of element 1 of travel_modes\n"
    ]
   },
   {
@@ -161,8 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the last travel mode to 'Metro'\n",
-""
+    "# Change the last travel mode to 'Metro'\n"
    ]
   },
   {
@@ -197,8 +194,7 @@
    "outputs": [],
    "source": [
     "other_modes = ['Plane', ['Speed-Boat', 'Ferry'], None, 10]\n",
-    "# create a new_list combining travel_modes and other_modes\n",
-""
+    "# create a new_list combining travel_modes and other_modes\n"
    ]
   },
   {
@@ -214,8 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try using a few string methods on new list\n",
-""
+    "#try using a few string methods on new list\n"
    ]
   },
   {
@@ -320,8 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try extracting the cost for travelling by car\n",
-""
+    "#try extracting the cost for travelling by car\n"
    ]
   },
   {
@@ -408,8 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the first three letters of each mode in travel_modes\n",
-""
+    "# print the first three letters of each mode in travel_modes\n"
    ]
   },
   {
@@ -427,8 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only print modes in travel_modes longer than 4 characters\n",
-""
+    "# Only print modes in travel_modes longer than 4 characters\n"
    ]
   },
   {
@@ -448,8 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use range to print the even numbers between 5 and 15\n",
-""
+    "# use range to print the even numbers between 5 and 15\n"
    ]
   },
   {
@@ -732,12 +723,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_ucl_email(first_name, last_name):\n",
-    "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
-    "    where <initial> is the first initial of <first_name>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}@ucl.ac.uk')\n",
+    "def print_ucl_email(first_name, last_name, enrolment_year):\n",
+    "    '''Email address generator, prints <initial>.<last_name>.<year>@ucl.ac.uk,\n",
+    "    where <initial> is the first initial of <first_name> \n",
+    "    and <year> is the last two digits of the <enrolment_year>'''\n",
+    "    print(f'{first_name[0].lower()}.{last_name.lower()}.{str(enrolment_year)[-2:]}@ucl.ac.uk')\n",
     "\n",
-    "print_ucl_email('Tim', 'Hillel')"
+    "print_ucl_email('Tim', 'Hillel', 2024)"
    ]
   },
   {
@@ -769,10 +761,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_ucl_email(first_name='first', last_name='last'):\n",
+    "def print_ucl_email(first_name='first', last_name='last', enrolment_year=1900):\n",
     "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
-    "    where <initial> is the first initial of <first_name>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}@ucl.ch')\n",
+    "    where <initial> is the first initial of <first_name>\n",
+    "    and <year> is the last two digits of the <enrolment_year>'''\n",
+    "    print(f'{first_name[0].lower()}.{last_name.lower()}.{str(enrolment_year)[-2:]}@ucl.ac.uk')\n",
     "\n",
     "print_ucl_email()"
    ]
@@ -792,8 +785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# modify the function to add sld and tld as optional arguments\n",
-""
+    "# modify the function to add sld and tld as optional arguments\n"
    ]
   },
   {
@@ -822,7 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ucl_email('My', 'Name', sld = 'not_a_real_email_address', tld = 'com')"
+    "email_generator('My', 'Name', sld = 'not_a_real_email_address', tld = 'com')"
    ]
   }
  ],
