Minor update to notebooks, added Google Colab buttons

--- a/Exercises/01_python_fundamentals_exercise.ipynb
+++ b/Exercises/01_python_fundamentals_exercise.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/big-ucl/intro-python/blob/main/Exercises/01_python_fundamentals_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python fundamentals\n",
     "\n",
-    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) ([tim.hillel@ucl.ac.uk](mailto:tim.hillel@ucl.ac.uk)) for the CEGE intro to Python sessions. \n",
+    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) for the CEGE Intro to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
