--- a/Exercises/02_python_further_techniques_exercise.ipynb
+++ b/Exercises/02_python_further_techniques_exercise.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/big-ucl/intro-python/blob/main/Exercises/02_python_further_techniques_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Better Python programming\n",
     "\n",
-    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) ([tim.hillel@ucl.ac.uk](mailto:tim.hillel@ucl.ac.uk)) for the CEGE intro to Python sessions. \n",
+    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) for the CEGE intro to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -125,7 +132,8 @@
    "outputs": [],
    "source": [
     "cyc = 'Cycle'\n",
-    "# Take a slice of the first three characters of cyc\n"
+    "# Take a slice of the first three characters of cyc\n",
+""
    ]
   },
   {
@@ -141,7 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take a slice of the first three characters of element 1 of travel_modes\n"
+    "# Take a slice of the first three characters of element 1 of travel_modes\n",
+""
    ]
   },
   {
@@ -159,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the last travel mode to 'Metro'\n"
+    "# Change the last travel mode to 'Metro'\n",
+""
    ]
   },
   {
@@ -194,7 +204,8 @@
    "outputs": [],
    "source": [
     "other_modes = ['Plane', ['Speed-Boat', 'Ferry'], None, 10]\n",
-    "# create a new_list combining travel_modes and other_modes\n"
+    "# create a new_list combining travel_modes and other_modes\n",
+""
    ]
   },
   {
@@ -210,7 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try using a few string methods on new list\n"
+    "#try using a few string methods on new list\n",
+""
    ]
   },
   {
@@ -315,7 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try extracting the cost for travelling by car\n"
+    "#try extracting the cost for travelling by car\n",
+""
    ]
   },
   {
@@ -402,7 +415,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print the first three letters of each mode in travel_modes\n"
+    "# print the first three letters of each mode in travel_modes\n",
+""
    ]
   },
   {
@@ -420,7 +434,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only print modes in travel_modes longer than 4 characters\n"
+    "# Only print modes in travel_modes longer than 4 characters\n",
+""
    ]
   },
   {
@@ -440,7 +455,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use range to print the even numbers between 5 and 15\n"
+    "# use range to print the even numbers between 5 and 15\n",
+""
    ]
   },
   {
@@ -723,13 +739,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_ucl_email(first_name, last_name, enrolment_year):\n",
-    "    '''Email address generator, prints <initial>.<last_name>.<year>@ucl.ac.uk,\n",
-    "    where <initial> is the first initial of <first_name> \n",
-    "    and <year> is the last two digits of the <enrolment_year>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}.{str(enrolment_year)[-2:]}@ucl.ac.uk')\n",
+    "def print_ucl_email(first_name, last_name):\n",
+    "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
+    "    where <initial> is the first initial of <first_name>'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
-    "print_ucl_email('Tim', 'Hillel', 2024)"
+    "print_ucl_email('Tim', 'Hillel')"
    ]
   },
   {
@@ -761,11 +776,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_ucl_email(first_name='first', last_name='last', enrolment_year=1900):\n",
+    "def print_ucl_email(first_name='first', last_name='last'):\n",
     "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
-    "    where <initial> is the first initial of <first_name>\n",
-    "    and <year> is the last two digits of the <enrolment_year>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}.{str(enrolment_year)[-2:]}@ucl.ac.uk')\n",
+    "    where <initial> is the first initial of <first_name>'''\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ch')\n",
     "\n",
     "print_ucl_email()"
    ]
@@ -776,7 +790,11 @@
    "source": [
     "We can mix parameters that must be specified and those with default values in the same function. \n",
     "\n",
-    "Try creating a function that requires the users first and last name, but includes the top layer domain (e.g. `ac.uk`) and second layer domain (e.g. `ucl`) to be optional arguments. You could also provide a boolean to specify whether the person uses their full name or not."
+    "Try creating a function that requires the users first and last name, but includes the enrolment year as an optional argument. \n",
+    "\n",
+    "If the enrolment year is specified, you should output a UCL student email address:\n",
+    "\n",
+    "`<first_initial>.<surname>.<yy>@ucl.ac.uk`"
    ]
   },
   {
@@ -785,7 +803,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# modify the function to add sld and tld as optional arguments\n"
+    "# modify the function to add sld and tld as optional arguments\n",
+""
    ]
   },
   {
@@ -820,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mamba",
    "language": "python",
    "name": "python3"
   },
@@ -834,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
