--- a/Exercises/04_pandas_exercise.ipynb
+++ b/Exercises/04_pandas_exercise.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/big-ucl/intro-python/blob/main/Exercises/04_pandas_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hands on with pandas"
    ]
   },
@@ -11,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) ([tim.hillel@ucl.ac.uk](mailto:tim.hillel@ucl.ac.uk)) for the CEGE intro to Python sessions. \n",
+    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) for the CEGE intro to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -72,15 +79,6 @@
    "metadata": {},
    "source": [
     "The dataframe has many attributes. Have a look at the shape of the dataframe, and the names of the columns. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-""
    ]
   },
   {
@@ -246,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try comparing the ratios of the different modes for the long_trips and trips shorter than 1000m. *Hint* divide the value counts by the number of trips"
+    "Try comparing the ratios of the different modes for the long_trips and trips shorter than 1000m. *Hint* you can either do this manually, or using an optional argument in the `value_counts` method!"
    ]
   },
   {
@@ -303,8 +301,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets add a few more columns. Use a list comprehension to create a list of all columns names which contain the string `dur`. \n",
-    "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new dataframe `dur_df`.\n",
+    "A more `pandas`-esque way to do this would have been a `groupby` command!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smalldf.groupby('travel_mode').mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets add a few more columns. Use a list comprehension to create a list of all columns names in the original DataFrame which contain the string `dur`. \n",
+    "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new DataFrame `dur_df`.\n",
     "\n",
     "*Hints*: Remember `df.columns` returns a list of the column names, and we can check if something (e.g. a substring or integer) is in something else (e.g. a string or list) using the `in` keyword!"
    ]
@@ -378,18 +392,11 @@
    "source": [
 ""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mamba",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
