--- a/Solutions/02_python_further_techniques_solution.ipynb
+++ b/Solutions/02_python_further_techniques_solution.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/big-ucl/intro-python/blob/main/Exercises/02_python_further_techniques_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Better Python programming\n",
     "\n",
-    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) ([tim.hillel@ucl.ac.uk](mailto:tim.hillel@ucl.ac.uk)) for the CEGE intro to Python sessions. \n",
+    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) for the CEGE intro to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -751,7 +758,7 @@
     "def print_ucl_email(first_name, last_name):\n",
     "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
     "    where <initial> is the first initial of <first_name>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}@ucl.ac.uk')\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ac.uk')\n",
     "\n",
     "print_ucl_email('Tim', 'Hillel')"
    ]
@@ -788,7 +795,7 @@
     "def print_ucl_email(first_name='first', last_name='last'):\n",
     "    '''Email address generator, prints <initial>.<last_name>@ucl.ac.uk,\n",
     "    where <initial> is the first initial of <first_name>'''\n",
-    "    print(f'{first_name[0].lower()}.{last_name.lower()}@ucl.ch')\n",
+    "    print(f'{first_name.lower()}.{last_name.lower()}@ucl.ch')\n",
     "\n",
     "print_ucl_email()"
    ]
@@ -799,7 +806,11 @@
    "source": [
     "We can mix parameters that must be specified and those with default values in the same function. \n",
     "\n",
-    "Try creating a function that requires the users first and last name, but includes the top layer domain (e.g. `ac.uk`) and second layer domain (e.g. `ucl`) to be optional arguments. You could also provide a boolean to specify whether the person uses their full name or not."
+    "Try creating a function that requires the users first and last name, but includes the enrolment year as an optional argument. \n",
+    "\n",
+    "If the enrolment year is specified, you should output a UCL student email address:\n",
+    "\n",
+    "`<first_initial>.<surname>.<yy>@ucl.ac.uk`"
    ]
   },
   {
@@ -809,16 +820,23 @@
    "outputs": [],
    "source": [
     "# modify the function to add sld and tld as optional arguments\n",
-    "def print_email(first_name, last_name, sld='ucl', tld='ac.uk', full_name=False):\n",
+    "def print_email(\n",
+    "        first_name, \n",
+    "        last_name, \n",
+    "        sld='ucl', \n",
+    "        tld='ac.uk',\n",
+    "        enrolment_year=None): \n",
     "    '''Email address generator, prints <first_name>.<last_name>@<sld>.<tld>\n",
     "        full_name: Boolean that determines whether to use the full first name (True), \n",
     "            or just the first initial (False) in the email. Default value, True. \n",
     "    '''\n",
-    "    if not full_name:\n",
+    "    if enrolment_year:\n",
+    "        last_name = f'{last_name}.{str(enrolment_year)[-2:]}'\n",
     "        first_name = first_name[0]\n",
     "    print(f'{first_name.lower()}.{last_name.lower()}@{sld}.{tld}')\n",
     "\n",
-    "print_email('Tim', 'Hillel', full_name=True)\n",
+    "print_email('Tim', 'Hillel', enrolment_year=2019)\n",
+    "print_email('Tim', 'Hillel')\n",
 ""
    ]
   },
@@ -848,13 +866,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ucl_email('My', 'Name', sld = 'not_a_real_email_address', tld = 'com')"
+    "email_generator('My', 'Name', sld = 'not_a_real_email_address', tld = 'com')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mamba",
    "language": "python",
    "name": "python3"
   },
@@ -868,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
