--- a/Solutions/04_pandas_solution.ipynb
+++ b/Solutions/04_pandas_solution.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/big-ucl/intro-python/blob/main/Exercises/04_pandas_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hands on with pandas"
    ]
   },
@@ -11,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) ([tim.hillel@ucl.ac.uk](mailto:tim.hillel@ucl.ac.uk)) for the CEGE intro to Python sessions. \n",
+    "This notebook was written by [Tim Hillel](https://profiles.ucl.ac.uk/85868) for the CEGE intro to Python sessions. \n",
     "\n",
     "Please contact before distributing or reusing the material below.\n",
     "\n",
@@ -80,17 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.shape\n",
-""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns\n",
+    "print(f'DataFrame Shape: {df.shape}')\n",
+    "print(f'DataFrame Columns: {df.columns}')\n",
 ""
    ]
   },
@@ -143,9 +141,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'''The mean distance is {dist.mean()}, \n",
-    "      the minimum distance is {dist.min()}, \n",
-    "      and the max distance is {dist.max()}''')\n",
+    "print(f'''Summary statistics for distance column:\n",
+    "                Mean: {dist.mean()}\n",
+    "                Min: {dist.min()}\n",
+    "                Max: {dist.max()}''')\n",
 ""
    ]
   },
@@ -180,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_trips = df[dist>5000]\n",
+    "long_trips = df[dist > 5000]\n",
 ""
    ]
   },
@@ -197,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_trips.shape\n",
+    "long_trips.shape[0]\n",
 ""
    ]
   },
@@ -254,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try comparing the ratios of the different modes for the long_trips and trips shorter than 1000m. *Hint* divide the value counts by the number of trips"
+    "Try comparing the ratios of the different modes for the long_trips and trips shorter than 1000m. *Hint* you can either do this manually, or using an optional argument in the `value_counts` method!"
    ]
   },
   {
@@ -263,8 +262,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(long_trips.travel_mode.value_counts()/long_trips.shape[0])\n",
-    "print(df[df.distance<1000].travel_mode.value_counts()/df[df.distance<1000].shape[0])\n",
+    "print(\n",
+    "f'''Mode shares for trips > 5km: \n",
+    "{long_trips.travel_mode.value_counts()/long_trips.shape[0]}\n",
+    "\n",
+    "Mode shares for trips<1km:\n",
+    "{df[df.distance<1000].travel_mode.value_counts(normalize=True)}''')\n",
 ""
    ]
   },
@@ -306,7 +309,8 @@
    "source": [
     "travel_modes = smalldf.travel_mode.unique()\n",
     "# use dictionary comprehension with travel_modes and smalldf\n",
-    "{m: smalldf[smalldf.travel_mode==m].distance.mean() for m in travel_modes}\n",
+    "mode_distance = {mode: smalldf[smalldf.travel_mode == mode].distance.mean() for mode in travel_modes}\n",
+    "print(mode_distance)\n",
 ""
    ]
   },
@@ -314,8 +318,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets add a few more columns. Use a list comprehension to create a list of all columns names which contain the string `dur`. \n",
-    "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new dataframe `dur_df`.\n",
+    "A more `pandas`-esque way to do this would have been a `groupby` command!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smalldf.groupby('travel_mode').mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets add a few more columns. Use a list comprehension to create a list of all columns names in the original DataFrame which contain the string `dur`. \n",
+    "Append the values `travel_mode` and `distance` to this list, and use it to select these columns from `df` to form a new DataFrame `dur_df`.\n",
     "\n",
     "*Hints*: Remember `df.columns` returns a list of the column names, and we can check if something (e.g. a substring or integer) is in something else (e.g. a string or list) using the `in` keyword!"
    ]
@@ -326,7 +346,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dur_df = df[['travel_mode', 'distance'] + [c for c in df.columns if 'dur' in c]]\n",
+    "dur_cols = [col for col in df.columns if 'dur' in col]\n",
+    "dur_cols.append('travel_mode')\n",
+    "dur_cols.append('distance')\n",
+    "dur_df = df[dur_cols]\n",
     "dur_df.head()\n",
 ""
    ]
@@ -410,18 +433,11 @@
     "fig.savefig('tim_density.png')\n",
 ""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mamba",
    "language": "python",
    "name": "python3"
   },
@@ -435,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
