Changed units from CHF to GBP

--- a/Solutions/01_python_fundamentals_solution.ipynb
+++ b/Solutions/01_python_fundamentals_solution.ipynb
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can manipulate variables in the same way we did for literal values. We are going to use this to calculate the fuel cost for a car trip. Come up with appropriate values for the `trip_distance`, `fuel_economy`, `fuel_price`, and use it to calculate the `fuel_cost` in CHF (think about units!)"
+    "We can manipulate variables in the same way we did for literal values. We are going to use this to calculate the fuel cost for a car trip (with a combustion engine!). Come up with appropriate values for the `trip_distance`, `fuel_economy`, `fuel_price`, and use it to calculate the `fuel_cost` in GBP (think about units!)"
    ]
   },
   {
@@ -395,9 +395,9 @@
    "outputs": [],
    "source": [
     "# Come up with appropriate values for trip_distance, fuel_economy, fuel_price\n",
-    "trip_distance = 25 #km\n",
-    "fuel_economy = 36 #miles per UK gallon\n",
-    "fuel_price = 1.67 #CHF per litre\n",
+    "trip_distance = 17 #km\n",
+    "fuel_economy = 45 #miles per UK gallon\n",
+    "fuel_price = 1.34 #GBP per litre\n",
 ""
    ]
   },
@@ -514,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bus_fare = 2.4\n",
+    "bus_fare = 1.75 #GBP\n",
     "# check if the bus is cheaper than the car (fuel_cost)\n",
     "# and tell the user if so!\n",
     "if fuel_cost > bus_fare:\n",
@@ -585,10 +585,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "age = 30\n",
-    "if name and (age<25 or age>=65):\n",
+    "age = 33\n",
+    "if name and (age<30 or age>=65):\n",
     "    print('Hi, ' + name + ', you are eligible for reduced public transport')\n",
-    "elif age<25 or age>=65:\n",
+    "elif age<30 or age>=65:\n",
     "    print('You are eligible for reduced public transport')\n",
     "else:\n",
     "    print('Sorry, you are not eligible for reduced public transport')"
@@ -710,7 +710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn",
    "language": "python",
    "name": "python3"
   },
